<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="200dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_medium"
        android:orientation="vertical">

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingTop="@dimen/space_small"
          android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextStyle.14.White"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/userTextViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextStyle.16.White"
            android:paddingStart="@dimen/space_medium"
            android:paddingLeft="@dimen/space_medium"/>

      </LinearLayout>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingTop="@dimen/space_small"
          android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextStyle.14.White"
            android:text="@string/user_name"/>

        <TextView
            android:id="@+id/userTextViewUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextStyle.16.White"
            android:paddingStart="@dimen/space_medium"
            android:paddingLeft="@dimen/space_medium"/>

      </LinearLayout>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingTop="@dimen/space_small"
          android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextStyle.14.White"
            android:text="@string/email"/>

        <TextView
            android:id="@+id/userTextViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextStyle.16.White"
            android:paddingStart="@dimen/space_medium"
            android:paddingLeft="@dimen/space_medium"/>

      </LinearLayout>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingTop="@dimen/space_small"
          android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextStyle.14.White"
            android:text="@string/address"/>

        <TextView
            android:id="@+id/userTextViewAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextStyle.16.White"
            android:paddingStart="@dimen/space_medium"
            android:paddingLeft="@dimen/space_medium"/>

      </LinearLayout>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingTop="@dimen/space_small"
          android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextStyle.14.White"
            android:text="@string/phone"/>

        <TextView
            android:id="@+id/userTextViewPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextStyle.16.White"
            android:paddingStart="@dimen/space_medium"
            android:paddingLeft="@dimen/space_medium"/>

      </LinearLayout>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingTop="@dimen/space_small"
          android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextStyle.14.White"
            android:text="@string/website"/>

        <TextView
            android:id="@+id/userTextWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextStyle.16.White"
            android:paddingStart="@dimen/space_medium"
            android:paddingLeft="@dimen/space_medium"/>

      </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/space_medium"
        android:orientation="horizontal">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textAppearance="@style/TextStyle.16.White"
          android:text="@string/company"/>

      <TextView
          android:id="@+id/userTextViewCompany"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textAppearance="@style/TextStyle.20.White"
          android:paddingStart="@dimen/space_medium"
          android:paddingLeft="@dimen/space_medium"/>

    </LinearLayout>

  </RelativeLayout>

</android.support.v7.widget.CardView>